# cidstore

./: Dockerfile  FREETHREADING_IMPLEMENTATION.md  MIGRATION_256BIT_STATUS.md  MIGRATION_256BIT_TODO.md  PYTHON313_UPGRADE.md  README.md  UPGRADE_SUMMARY.md  ZVIC_INTEGRATION_SUMMARY.md  cidstore_optimized.py  conftest.py  docker-entrypoint.sh  pyproject.toml  pyproject_config.py  pyrightconfig.json  requirements.txt  test_simple_multivalue.py  triplestore.h5  verify_zvic.py  zvic_smoke.py
.archive/: store_corrected.py  store_new.py
.box/: store_old.py
.github/: copilot-instructions.md
.github/scripts/: ci_build_python.sh
.github/workflows/: ci-free-threaded.yml  publish-cidstore-image.yml
docs/: AI workflow.md  CIDSTORE_HANDOFF_README.md  Dockerfile.custom-py313  Dockerfile.standalone  HANDOFF_CIDSTORE_IMAGE.md  STANDALONE_DOCKER_GUIDE.md  api.md  api.mk  llms.md  plugin_authoring.md  python313_freethreading.md  rest_api.md  running-the-system-test.md  spec 1 - Intro.md  spec 10 - conclusion.md  spec 11 - Conclusion.md  spec 2 - Data Types and Structure.md  spec 2 - Data Types.md  spec 3 - Bucket Structure and Directory Management.md  spec 3 - Node Structure.md  spec 4 - WAL.md  spec 5 - Multi-Value Keys.md  spec 6 - Bucket Splitting and Merging.md  spec 6 - splitmerge.md  spec 7 - deletion.md  spec 8 - concurrency.md  spec 9 - hdf5.md  spec00-Intro.md  spec01-Intro.md  spec02-Data Types and Structure.md  spec03-Bucket Structure and Directory Management.md  spec05-Multi-Value Keys.md  spec07-deletion.md  spec08-Concurrency & Crash Recovery.md  spec10-Microservice.md  spec11-Conclusion.md  zvic_integration.md
docs/nav/: insertion.md  storage.md  store.md  tests.md  wal.md
docs/scrum/: 2025-42.md  2025-43.md  README.md
docs/specs/: api.md  spec00-Intro.md  spec02-Data Types and Structure.md  spec03-Bucket Structure and Directory Management.md  spec05-Multi-Value Keys.md  spec09-hdf5.md  spec10-Microservice.md  spec12-Predicate Specialization.md  spec13-Plugin Infrastructure.md  spec14-CIDSem Integration.md  spec20-Composite Keys.md
examples/: README.md  free_threading_demo.py  zvic_demo.py
k8s/: configmap.yaml  deployment-read.yaml  service.yaml  statefulset-writer.yaml
llm_playground/: README.md  run_demo.py
scripts/: ci_build_in_container.sh  ci_build_python.sh  condense_timelines.py  enable_optimizations.ps1  enable_optimizations.sh  extract_timelines.py  run_demo_wsl.sh  run_probe_wsl.sh  run_probe_wsl2.sh  run_tests_with_built_python.sh  run_tests_wsl.sh  setup_dev.ps1  setup_dev.sh  validate_pyproject.py
src/cidstore/: async_zmq_server.py  auth.py  cli.py  config.py  constants.py  control_api.py  deletion_log.py  dtypes.py  exceptions.py  jackhash.py  keys.py  logger.py  main.py  maintenance.py  method_calls.py  metrics.py  plugins.py  predicates.py  sitecustomize.py  storage.py  store.py  util.py  utils.py  wal.py  wal_analyzer.py  zvic_init.py
src/cidtree/: cli.py  config.py  deletion_log.py  keys.py  main.py  node.py  storage.py  tree.py  valueset.py  wal.py
tests/: !test_tdd.py  conftest.py  test_.py  test_async_zmq_server.py  test_audit_indices.py  test_background_comprehensive.py  test_background_maintenance.py  test_background_simple.py  test_batch_operations.py  test_bucket.py  test_chaos_load.py  test_cidsem_validation.py  test_composite_keys.py  test_concurrency.py  test_control_api.py  test_control_api_debug.py  test_datatypes.py  test_delete_operations.py  test_delete_value.py  test_deletion.py  test_deletion_gc.py  test_directory.py  test_ecc.py  test_hdf5_basic.py  test_hdf5_integration.py  test_hot_reload.py  test_inline_slots.py  test_integration.py  test_keys.py  test_maintenance_manager_enhanced.py  test_maintenance_manager_timeout.py  test_maintenance_manager_timeout_comprehensive.py  test_multivalue.py  test_multivalue_deterministic.py  test_node.py  test_plugin_performance.py  test_plugin_registry.py  test_predicate_registry_enhanced.py  test_python313_features.py  test_query_optimizer.py  (+21 more)
tests/cidsem_mockup/: .dockerignore  Dockerfile  README.md  cidsem_test.py  config.py  docker-compose.yml  requirements.txt
tests/integration/: vertical_prototype.py
tests/wip_ai/: USAGE.txt  debug_timeout.py  test_default_timeout.py  wip_ai.py  wip_ai_1.py  wip_ai_2.py  wip_ai_3.py
tools/: agent_command_policy.md  repro_wal.py
typings/zvic/: __init__.pyi  annotation_constraints.pyi  compatibility.pyi  main.pyi  utils.pyi
