[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cidstore"
version = "2025.35.1"
description = "A high-performance, disk-backed B+Tree implementation for triplestores only working with CIDs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anselm Kiefner", email = "cidstore-github@anselm.kiefner.de" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "annotated-types",
    "anyio",
    "click",
    "colorama",
    "crc32c",
    "filelock",
    "fastapi",
    "h11",
    "h5py",
    "idna",
    "iniconfig",
    "msgpack",
    "numpy",
    "packaging",
    "pluggy",
    "prometheus_client",
    "pydantic",
    "pydantic_core",
    "Pygments",
    "pytest",
    "pyzmq",
    "setuptools",
    "sniffio",
    "starlette",
    "typing-inspection",
    "typing_extensions",
    "uvicorn",
    "wheel"
]

[project.urls]
Homepage = "https://github.com/amogorkon/cidstore"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
timeout = 20
timeout_method = "thread"


[project.optional-dependencies]
dev = ["pytest"]