[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cidstore"
version = "2025.35.1"
description = "A high-performance, disk-backed B+Tree implementation for triplestores only working with CIDs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anselm Kiefner", email = "cidstore-github@anselm.kiefner.de" }
]
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "crc32c>=2.7.1",
    "filelock>=3.19.1",
    "fastapi>=0.118.0",
    "h11>=0.16.0",
    "h5py>=3.14.0",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "msgpack>=1.1.1",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "prometheus_client>=0.23.1",
    "pydantic>=2.11.10",
    "pydantic_core>=2.33.2",
    "Pygments>=2.19.2",
    "pytest>=8.4.2",
    "pyzmq>=27.1.0",
    "setuptools>=80.9.0",
    "sniffio>=1.3.1",
    "starlette>=0.48.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "uvicorn>=0.37.0",
    "wheel>=0.45.1",
    "zvic==2025.43.0"
]

[project.urls]
Homepage = "https://github.com/amogorkon/cidstore"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
timeout = 20
timeout_method = "thread"
asyncio_mode = "auto"


[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio"]
zvic-crosshair = ["zvic[crosshair]==2025.43.0"]

[project.scripts]
cidstore-optimized = "cidstore_optimized:main"